@@ -70,6 +70,7 @@
   * Fix missing ty (a fast python language server) inlay hints when ~lsp-use-plist~ is true
   * Add wasm-language-tools support
   * Add ~lsp-ruff-multi-root~ variable to allow disabling multi-root option for ruff client
+  * Add support for ~~crates-lsp~~
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
